--- a/src/DrK.Heartbee/View/SelectorBarControl.xaml
+++ b/src/DrK.Heartbee/View/SelectorBarControl.xaml
@@ -1,19 +1,15 @@
-<phone:PhoneApplicationPage
-    x:Class="DrK.Heartbee.MainPage"
+﻿<UserControl x:Class="DrK.Heartbee.View.SelectorBar"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="False">
+    d:DesignHeight="480" d:DesignWidth="480">
     
-    <Grid Height="100" VerticalAlignment="Top">
+    <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneChromeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -23,23 +19,23 @@
 
         <Border Grid.Column="0" BorderBrush="White" BorderThickness="2">
             <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/heart.png"/>
+                <Image Source="{Binding Image0Source}"/>
             </Button>
         </Border>
         <Border Grid.Column="1" BorderBrush="White" BorderThickness="2">
             <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/bar-graph.png"/>
+                <Image Source="{Binding Image1Source}"/>
             </Button>
         </Border>
         <Border Grid.Column="2" BorderBrush="White" BorderThickness="2">
             <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/calendar.png"/>
+                <Image Source="{Binding Image2Source}"/>
             </Button>
         </Border>
         <Border Grid.Column="3" BorderBrush="White" BorderThickness="2">
             <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/pulse.png"/>
+                <Image Source="{Binding Image3Source}"/>
             </Button>
         </Border>
     </Grid>
-</phone:PhoneApplicationPage>
+</UserControl>
