--- a/src/DrK.Heartbee/MainPage.xaml
+++ b/src/DrK.Heartbee/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:view="clr-namespace:DrK.Heartbee.View"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -13,33 +14,7 @@
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="False">
     
-    <Grid Height="100" VerticalAlignment="Top">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-
-        <Border Grid.Column="0" BorderBrush="White" BorderThickness="2">
-            <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/heart.png"/>
-            </Button>
-        </Border>
-        <Border Grid.Column="1" BorderBrush="White" BorderThickness="2">
-            <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/bar-graph.png"/>
-            </Button>
-        </Border>
-        <Border Grid.Column="2" BorderBrush="White" BorderThickness="2">
-            <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/calendar.png"/>
-            </Button>
-        </Border>
-        <Border Grid.Column="3" BorderBrush="White" BorderThickness="2">
-            <Button Margin="0" BorderThickness="0">
-                <Image Source="/Assets/pulse.png"/>
-            </Button>
-        </Border>
+    <Grid>
+        <view:SelectorBar DataContext="{Binding SelectorBarViewModel}" Height="100" VerticalAlignment="Top"/>
     </Grid>
 </phone:PhoneApplicationPage>
