--- a/src/DrK.Heartbee/View/CenterHeartbeat.xaml
+++ b/src/DrK.Heartbee/View/CenterHeartbeat.xaml
@@ -12,6 +12,8 @@
     <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneChromeBrush}">
         <Grid.ColumnDefinitions>
         </Grid.ColumnDefinitions>
-        <Image Source="/Assets/pulse.png"/>
+        <Button Tap="readCamera">
+            <Image Source="/Assets/pulse.png" />
+        </Button>
     </Grid>
 </UserControl>
