--- a/src/DrK.Heartbee/View/GraphControl.xaml
+++ b/src/DrK.Heartbee/View/GraphControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl Name="control" x:Class="DrK.Heartbee.View.MultibeatControl"
+﻿<UserControl x:Class="DrK.Heartbee.View.GraphControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,29 +9,33 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     d:DesignHeight="480" d:DesignWidth="480">
     
-    <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneChromeBrush}">
-        <Image Name="redwave" Source="/Assets/redwave.png" Margin="0" Stretch="Fill">
-            <Image.RenderTransform>
-                <TranslateTransform X="-1000"/>
-            </Image.RenderTransform>
+    <Grid x:Name="LayoutRoot">
+        <Image Name="redwave" Source="/Assets/graph.png" Margin="0" Stretch="Fill">
 
-            <Image.Triggers>
+        </Image>
+        
+        <Rectangle Name="reptar" Fill="Black">
+            <Rectangle.RenderTransform>
+                <TranslateTransform X="0"/>
+            </Rectangle.RenderTransform>
+
+            
+
+            <Rectangle.Triggers>
                 <EventTrigger RoutedEvent="Image.Loaded">
                     <BeginStoryboard>
                         <Storyboard
-                            Storyboard.TargetName="redwave">
+                            Storyboard.TargetName="reptar">
                             <DoubleAnimation
                                 Storyboard.TargetProperty="(UIELement.RenderTransform).(TranslateTransform.X)"
-                                From="-1000"
-                                To="1000"
+                                From="0"
+                                To="500"
                                 Duration="00:00:03"
-                                RepeatBehavior="Forever"/>
+                                />
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
-                </Image.Triggers>
-        </Image>
-
-        <Image Source="/Assets/HeartWave.png" Stretch="Fill"/>
+            </Rectangle.Triggers>
+        </Rectangle>
     </Grid>
 </UserControl>
