--- a/src/DrK.Heartbee/View/GraphPage.xaml
+++ b/src/DrK.Heartbee/View/GraphPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DrK.Heartbee.View.HeartbeePageControl"
+﻿<UserControl x:Class="DrK.Heartbee.View.GraphPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,14 +9,15 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     d:DesignHeight="480" d:DesignWidth="480">
-    
+
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
 
-        <view:HeartbeeControl/>
-        <view:MultibeatControl Grid.Row="1"/>
+        <view:GraphControl/>
+
+        <view:MultibeatControl Grid.Row="1" VerticalAlignment="Bottom"/>
     </Grid>
 </UserControl>
